# python-lessons

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
pages/: base_page.py  docs_page.py  main_page.py
tests/: test_doc_page.py  test_main_page.py
