[tool.poetry]
name = "python-lessons"
version = "0.1.0"
description = ""
authors = ["Oleg Averkin <averkinoa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
pytest-playwright = "^0.4.3"
selenium = "^4.16.0"
pytest-reporter-html1 = "^0.8.3"
setuptools = "^69.0.3"
pytest-xdist = "^3.5.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
